@@ -58,7 +58,7 @@ class KafkaProducerAvroSpecificApplicationTest {
         assertEquals(0, recordMetadata.get().offset());
         assertEquals(0, recordMetadata.get().partition());
         assertEquals(1, mockProducer.history().size());
-        assertEquals(message, mockProducer.history().get(0));
+        assertEquals(message, mockProducer.history().getFirst());
     }
 
     @Test
@@ -77,6 +77,6 @@ class KafkaProducerAvroSpecificApplicationTest {
         ExecutionException executionException = assertThrows(ExecutionException.class, recordMetadata::get);
         assertEquals(executionException.getCause(), exception);
         assertEquals(1, mockProducer.history().size());
-        assertEquals(message, mockProducer.history().get(0));
+        assertEquals(message, mockProducer.history().getFirst());
     }
 }
